--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="welcome">
-        <img src="/home/shanza-fatima/Documents/Documents/Coding/task 3 login smit/Screenshot from 2024-07-12 23-57-15.png">
+        <img src="/Screenshot from 2024-07-12 23-57-15.png">
         <p class="welcometext">Welcome <br>Back!</p>
     </div>
     <div class="Loginbox">
